# openrouter-mini

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
openrouter_mini/: __init__.py  client.py
tests/: test_client.py
